--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <html> <head> <meta charset="utf-8"> <title></title> <!--    <base href="localhost:9000/" />    --> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.b951e9cf.css"> <link rel="stylesheet" href="styles/main.c45410c5.css"> <style>svg {
+<!doctype html> <html> <head> <meta charset="utf-8"> <title></title> <!--    <base href="localhost:9000/" />    --> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.b951e9cf.css"> <link rel="stylesheet" href="styles/main.a8ac07bd.css"> <style>svg {
     border: 1px solid black;
     flex-grow: 0;
     flex-shrink: 1;
@@ -34,6 +34,17 @@
     border-top: 3px solid #ca1f25;
 }
 
+.rig {
+  background-image: url("https://utargetenergy.github.io/images/rig.png") ; /* fixed center / cover; */
+  background-color: #cccccc; /* Used if the image is unavailable */
+  height: 1044px; /* You must set a specified height */
+    padding: 1em;
+    color:#0f2c52
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+/*  background-size: cover; */
+  opacity: 0.85; 
+}
 
 
 
@@ -108,4 +119,4 @@
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="scripts/vendor.8f9f6d6f.js"></script> <script src="scripts/scripts.d51a14ca.js"></script> <script type="text/javascript">angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));</script> </div></body> </html>
+       ga('send', 'pageview');</script> <script src="scripts/vendor.8f9f6d6f.js"></script> <script src="scripts/scripts.92b4c7f9.js"></script> <script type="text/javascript">angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));</script> </div></body> </html>
