--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"> <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<!doctype html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1"> <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> --> <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 --> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.b951e9cf.css"> <link rel="stylesheet" href="styles/main.a8ac07bd.css"> <style>body {
   min-height: 75rem;
