--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1"> <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> --> <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
---> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.b951e9cf.css"> <link rel="stylesheet" href="styles/main.a8ac07bd.css"> <style>body {
+
+--> <!--    <link rel="stylesheet" href="styles/main.b4e1c412.css"> --> <!--    <link  rel='stylesheet' href='styles/airspace.css' type='text/css' /> 
+    <link  rel='stylesheet' href='styles/animate.css' type='text/css' /> 
+--> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.b951e9cf.css"> <link rel="stylesheet" href="styles/main.b4e1c412.css"> <style>body {
   min-height: 75rem;
   padding-top: 4.5rem;
 }
@@ -129,4 +132,4 @@ svg {
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="scripts/vendor.8f9f6d6f.js"></script> <script src="scripts/scripts.739ee538.js"></script> <script type="text/javascript">angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));</script> </div></body> </html>
+       ga('send', 'pageview');</script> <script src="scripts/vendor.8f9f6d6f.js"></script> <script src="scripts/scripts.2ca53151.js"></script> <script type="text/javascript">angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));</script> </div></body> </html>
