update product page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1"> <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> --> <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<!DOCTYPE html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1"> <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> --> <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
 --> <!--    <link rel="stylesheet" href="styles/main.b4e1c412.css"> --> <!--    <link  rel='stylesheet' href='styles/airspace.css' type='text/css' /> 
@@ -8,13 +8,13 @@
   padding-top: 4.5rem;
 }
 
-svg {
-/*    border: 1px solid black; */
-    flex-grow: 0;
+/*svg {
+    border: 1px solid black; */
+/*    flex-grow: 0;
     flex-shrink: 1;
     flex-basis: 50%;
 }
-
+*/
 @keyframes openYourHeart {from {r: 0} to {r: 60px}}
 
 #myClip circle {
@@ -132,4 +132,4 @@ svg {
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="scripts/vendor.a6c0a49e.js"></script> <script src="scripts/scripts.ecd976a8.js"></script> <script type="text/javascript">angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));</script> </div></body> </html>
+       ga('send', 'pageview');</script> <script src="scripts/vendor.a6c0a49e.js"></script> <script src="scripts/scripts.d97614ce.js"></script> <script type="text/javascript">angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));</script> </div></body> </html>
