--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1"> <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> --> <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-
---> <!--    <link rel="stylesheet" href="styles/main.b4e1c412.css"> --> <!--    <link  rel='stylesheet' href='styles/airspace.css' type='text/css' /> 
-    <link  rel='stylesheet' href='styles/animate.css' type='text/css' /> 
---> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.2574f809.css"> <link rel="stylesheet" href="styles/main.b4e1c412.css"> <style>body {
+<!DOCTYPE html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.e18bba43.css"> <link rel="stylesheet" href="styles/main.57a5de5d.css"> <style>body {
   min-height: 75rem;
   padding-top: 4.5rem;
 }
@@ -56,19 +51,6 @@
   opacity: 0.85; 
 }
 
-
-
-.about {
-  background-image: url("https://utargetenergy.github.io/images/maple.png") ; /* fixed center / cover; */
-  background-color: #cccccc; /* Used if the image is unavailable */
-  height: 150px; /* You must set a specified height */
-    padding: 1em;
-    color:#0f2c52;
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-/*  background-size: cover; */
-  opacity: 0.85; 
-}
 .carousel{
     background: #0f2c52;
 }
@@ -77,9 +59,9 @@
     height:32rem;
 }
 .carousel-caption {
-  bottom: 8rem;
+    bottom: 8rem;
 /*  background-color: #7cf; */
-  z-index: 10;
+    z-index: 10;
 }
 
 
@@ -132,4 +114,4 @@
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="scripts/vendor.a6c0a49e.js"></script> <script src="scripts/scripts.d97614ce.js"></script> <script type="text/javascript">angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));</script> </div></body> </html>
+       ga('send', 'pageview');</script> <script src="scripts/vendor.a6c0a49e.js"></script> <script src="scripts/scripts.b0816b07.js"></script> <script type="text/javascript">angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));</script> </div></body> </html>
