--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.e18bba43.css"> <link rel="stylesheet" href="styles/main.090c2b28.css"> <style>body {
+<!DOCTYPE html> <html ng-app="helloApp"> <head> <meta charset="utf-8"> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.e18bba43.css"> <link rel="stylesheet" href="styles/main.2bf3d006.css"> <style>body {
   min-height: 75rem;
   padding-top: 4.5rem;
 }
@@ -39,10 +39,12 @@
     border-top: 3px solid #ca1f25;
 }
 
+
 .rig {
   background-image: url("https://utenergy.ca/images/rig.png") ; /* fixed center / cover; */
-  background-color: #cccccc; /* Used if the image is unavailable */
+  background-color: #0f2c52; /* Used if the image is unavailable */
   height: 1044px; /* You must set a specified height */
+  width: 270px;
   padding: 1em;
   color:#0f2c52;
   background-position: center; /* Center the image */
@@ -117,4 +119,4 @@
     <script type="text/javascript">
         angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));
     </script>
---> <script src="scripts/scripts.2bd58d0f.js"></script> </div></body> </html>
+--> <script src="scripts/scripts.f8a51fdc.js"></script> </div></body> </html>
